Kleopatra: Gpgtar progress label needs to be generalized or updated
Closed, ResolvedPublic

Assigned To
Authored By
aheinecke
Jun 9 2023, 12:50 PM
Tags
Subscribers

Description

This replaces T6522 since the progress label is not updated it looks to the user that it is stuck the whole time encrypting some single file or archive. In that case it would be better to have a generalized Encrypting .... label instead of the wrong information that it is "still" encrypting some file or folder.

I know that updating is nearly impossible unless we change a lot in the messaging between gpgtar and kleo so a generalized label should already fix this.