Show a better progress text when creating a signed/encrypted archive

GnuPG-bug-id: 6525